# GR00T_battery_assemble

./: pyproject.toml  run_piper.sh
.github/workflows/: main.yml
examples/PiperPi05/: README.md  check_training_setup.py  finetune_piper_pi05.sh  piper_pi05_config.py  prepare_stats.sh  serve_gr00t_as_pi05.py
gr00t/configs/: finetune_config.py
gr00t/experiment/: launch_finetune.py
