# Default platform pyproject.toml (x86, GB200, and any non-Jetson GPU)

[build-system]
requires = ["setuptools>=67", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "gr00t"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "albumentations==1.4.18",
    "huggingface-hub[cli]",
    "opencv-python-headless>=4.5,<4.13",
    "diffusers==0.35.1",
    "dm-tree",
    "lmdb==1.7.5",
    "msgpack==1.1.0",
    "msgpack-numpy==0.4.8",
    "pandas==2.2.3",
    "peft==0.17.1",
    "termcolor==3.2.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.57.3",
    "tyro==0.9.17",
    "click==8.1.8",
    "datasets==3.6.0",
    "cryptography>=46.0.7",
    "einops==0.8.1",
    "gitpython==3.1.50",
    "jsonlines==4.0.0",
    "gymnasium==1.2.2",
    "matplotlib==3.10.1",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "scipy==1.15.3",
    # Default sync in this fork targets x86_64 training machines.
    "torchcodec==0.4.0; platform_machine == 'x86_64'",
    "wandb==0.23.0",
    "pyzmq==27.0.1",
    # deepspeed publishes wheels only for x86_64 Linux.
    "deepspeed==0.17.6; sys_platform == 'linux' and platform_machine == 'x86_64'",
    # flash-attn is sourced from the x86_64 wheel URL in `[tool.uv.sources]` below.
    "flash-attn==2.7.4.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "onnx>=1.20.0",
    "onnxscript",
]

[project.optional-dependencies]
deployment = [
    # TensorRT is large and only needed for export / deployment workflows.
    # Keep it out of the default training environment.
    "tensorrt-cu12>=10.15.1.29; platform_machine == 'x86_64'",
    "tensorrt-cu12-libs>=10.15.1.29; platform_machine == 'x86_64'",
    "tensorrt-cu13>=10.15.1.29; platform_machine == 'aarch64'",
    "tensorrt-cu13-libs>=10.15.1.29; platform_machine == 'aarch64'",
]
dev = [
    "boto3",
    "ruff",
    "ipython",
    "pip-licenses",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "build",
    "pre-commit",
    # `tomllib` is 3.11+ stdlib; provide `tomli` for the 3.10 fallback.
    "tomli; python_version < '3.11'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gr00t*"]

[tool.uv]
# This fork's default training path runs on x86_64 Linux. Keeping aarch64 in the
# required environments makes `uv sync` inspect local LFS wheels even on x86
# machines, which fails after a clone if Git LFS objects have not been hydrated.
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
triton = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
flash-attn = [
    { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.7cxx11abiFALSE-cp310-cp310-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.10'" },
    { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.7cxx11abiFALSE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'" },
]
tensorrt-cu12-libs = [
    { index = "nvidia-pypi", marker = "platform_machine == 'x86_64'" },
]
tensorrt-cu13-libs = [
    { index = "nvidia-pypi", marker = "platform_machine == 'aarch64'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.7.1", "numpy==1.26.4", "triton==3.3.1"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
addopts = "--import-mode=importlib"
markers = [
    "gpu: tests that require a GPU",
    "edge_device: tests that run on edge device runners (Orin, Thor, DGX Spark)",
    "multigpu: tests that require multiple GPUs and use all visible GPUs",
]
# Include fixture setup/teardown in JUnit <testcase time="..."> so duration
# reports (ci/print_duration_summary.py) and TestRun.duration in testdb
# reflect real wall-clock time. With the default ("call"), expensive
# session/module/class-scoped fixtures (e.g. NFS->local model staging,
# Gr00tPolicy load) are invisible and tests look misleadingly fast.
junit_duration_report = "total"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["gr00t"]
exclude = [
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".venv",
    "dist",
    "logs",
    "*.ipynb",
    "external_dependencies",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = false
split-on-trailing-comma = false
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
